# voice-to-text-ime

./: .gitignore  Cargo.toml  build-debug.ps1  build-release.ps1  todo.md
src/: audio.rs  autostart.rs  gui.rs  main.rs  state.rs  tray.rs  whisper.rs
ui/: app.slint
