[package]
name = "voice-to-text-ime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candle-core = { version = "0.8.2", features = ["cuda"] }
candle-nn = { version = "0.8.2", features = ["cuda"] }
candle-transformers = "0.8.2"
hf-hub = "0.3.2"
tokenizers = "0.19.1"
cpal = "0.15.2"
hound = "3.5.0"
rdev = "0.5.3"
enigo = "0.1.2"
anyhow = "1.0"
clap = { version = "4.4", features = ["derive"] }
byteorder = "1.5"
rubato = "0.14" # For resampling audio to 16kHz
crossbeam-channel = "0.5" # For communication between audio thread and main thread
